--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.1.6",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.8",
@@ -14,22 +15,25 @@
     "@react-navigation/material-bottom-tabs": "^6.2.16",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
-    "expo": "^48.0.0",
-    "expo-constants": "~14.2.1",
-    "expo-image-picker": "~14.1.1",
-    "expo-splash-screen": "~0.18.2",
-    "expo-status-bar": "~1.4.4",
+    "expo": "^49.0.0",
+    "expo-constants": "~14.4.2",
+    "expo-image-picker": "~14.3.1",
+    "expo-modules-autolinking": "^1.5.0",
+    "expo-splash-screen": "~0.20.4",
+    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.72.1",
     "react-native-bouncy-checkbox": "^3.0.7",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-maps": "^1.3.2",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-maps": "1.7.1",
     "react-native-paper": "^4.9.2",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "~3.20.0",
+    "react-native-reanimated": "^3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "uglify-js": "^3.17.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
